objects/Matter_Spend_Document__c.object
<CustomObject>
    <fields>
        <fullName>Approved_Date__c</fullName>
        <label>Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approved_For_Payment_Date__c</fullName>
        <label>Approved For Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The individual that needs to approve this document before it can be submitted for payment processing.</inlineHelpText>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Matter_Spend_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BU_Corporate_Code__c</fullName>
        <label>BU Corporate Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Box_Folder_Link__c</fullName>
        <label>Box Folder Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Cancelled_Date__c</fullName>
        <label>Cancelled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cost_Centre2__c</fullName>
        <label>Cost Centre</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Centre__c</fullName>
        <formula>Legal_Quote__r.Legal_Quote_Request__r.Cost_Centre__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost Centre</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Est_Payment__c</fullName>
        <formula>Pending_Payment_Date__c + VALUE(TEXT(Payment_Terms_Days__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Est. Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GL_Account__c</fullName>
        <label>GL Account</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grand_Total__c</fullName>
        <formula>Total_Amount_Non_VATable__c  +   Total_Vat_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grand Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InvoiceDate__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InvoiceNumber__c</fullName>
        <label>Invoice Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvoiceReceivedDate__c</fullName>
        <description>Capture the Date when Invoiced has been received.</description>
        <label>Invoice Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_Comment__c</fullName>
        <label>Latest Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Law_Firm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Law Firm</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>On/Off Panel Law Firm</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Matter Spend Documents</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legal_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal Quote</label>
        <referenceTo>Legal_Quote__c</referenceTo>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MatterNumber__c</fullName>
        <label>Matter Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Matter_Record_Type__c</fullName>
        <formula>Matter__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Matter Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Matter_Spend_Schedule__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Matter Spend Schedule</label>
        <referenceTo>Matter_Spend_Schedule__c</referenceTo>
        <relationshipLabel>Matter Spend Documents</relationshipLabel>
        <relationshipName>Matter_Spend_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Matter__c</fullName>
        <label>Matter</label>
        <referenceTo>advpm__Matter__c</referenceTo>
        <relationshipLabel>Matter Spend Document</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Paid_Date__c</fullName>
        <label>Paid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Terms_Days__c</fullName>
        <label>Payment Terms (Days)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                    <default>true</default>
                    <label>30</label>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>120+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pending_Payment_Date__c</fullName>
        <label>Pending Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Queried_Date__c</fullName>
        <label>Queried Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Spend_Schedules_Owners_Email__c</fullName>
        <label>Spend Schedules Owners Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Queried</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Approved For Payment</fullName>
                </value>
                <value>
                    <fullName>Pending Payment</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted_For_Approval_Date__c</fullName>
        <label>Submitted For Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Age_Days__c</fullName>
        <formula>IF(
	ISPICKVAL(Status__c,&quot;Paid&quot;),  TODAY()-Paid_Date__c, 
	IF(
		ISPICKVAL(Status__c,&quot;Cancelled&quot;), TODAY()-Cancelled_Date__c, TODAY()-DATEVALUE(CreatedDate)
		)
	)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Age (Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Excl_VAT__c</fullName>
        <description>value of items that are non VAT exempt (where VAT applies)</description>
        <inlineHelpText>value of items that are non VAT exempt (where VAT applies)</inlineHelpText>
        <label>Total Amount (Incl. VAT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Non_VATable__c</fullName>
        <description>Total value of items that are VAT exempt.</description>
        <inlineHelpText>Total value of items that are VAT exempt.</inlineHelpText>
        <label>Total Amount (Excl. VAT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Non_Vatable_Amount_X__c</fullName>
        <formula>(Total_Amount_Non_VATable__c) * ((VALUE(TEXT(VAT_Value__c))) / 100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Non Vatable Amount X</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Non_Vatable_Amount_Y__c</fullName>
        <formula>Total_Non_Vatable_Amount_X__c  -  Total_Vat_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Non Vatable Amount Y</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Non_Vatable_Amount__c</fullName>
        <description>13/10/17 (MS) - Update as per W-002471 - TMG LEAP: Incorrect calculation of the Non - Vatable Amount Filed.</description>
        <formula>ROUND(ABS(Total_Non_Vatable_Amount_Y__c) * 100/(VALUE(TEXT(VAT_Value__c))),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Non-Vatable Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_VAT__c</fullName>
        <formula>Total_Vat_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total (VAT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Vat_Amount__c</fullName>
        <label>Total Vat Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Credit Note</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VAT_Value__c</fullName>
        <label>VAT Value (%)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                    <default>true</default>
                    <label>15</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vat_Type__c</fullName>
        <formula>IF(Total_Vat_Amount__c &gt;0,&apos;VAT&apos;,&apos;Non Vat&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vat Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Number__c</fullName>
        <label>Vendor Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Matter Spend Document</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Law_Firm__c</columns>
        <columns>Matter__c</columns>
        <columns>Status__c</columns>
        <columns>Vat_Type__c</columns>
        <columns>Matter_Spend_Schedule__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MSD-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Matter Spend Documents</pluralLabel>
    <recordTypes>
        <fullName>Matter_Spend_Document</fullName>
        <active>true</active>
        <label>Matter Spend Document</label>
    </recordTypes>
    <recordTypes>
        <fullName>Matter_Spend_Document_Locked</fullName>
        <active>true</active>
        <label>Matter Spend Document (Locked)</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>